# Inspa

./: .gitignore  CHANGELOG.md  README.md  inspa_runtime.spec  pyproject.toml
.github/: copilot-instructions.md
.github/prompts/: system-agent.prompt.md  system.prompt.md
docs/: colors.md  docs_requirements.md  docs_requirements_Version3.md  implementation_plan_python.md  next_development_plan.md
inspa/: __init__.py  __main__.py  gui.py
inspa/cli/: __init__.py  main.py
inspa/cli/commands/: __init__.py  build.py  extract.py  gui.py  inspect.py  validate.py
inspa/config/: __init__.py  loader.py  schema.py
inspa/gui/: __init__.py  builder_gui.py  builder_gui_old.py  dialogs.py  installer_gui.py  theme.py  widgets.py
inspa/gui/pages/: __init__.py  advanced_page.py  base_page.py  build_page.py  files_page.py  general_page.py  license_page.py  post_install_page.py  ui_page.py
inspa/runtime_stub/: __init__.py  installer.py  main.py  standalone_main.py
inspa/utils/: __init__.py  logging.py  logging_old.py  paths.py
tests/unit/: test_build_pipeline.py  test_collector.py  test_compressor.py  test_config.py  test_footer_parsing.py  test_runtime_stub.py  test_zstd_extract_runtime.py
